fix: text-align-last

--- a/sass/characteristic.sass
+++ b/sass/characteristic.sass
@@ -164,7 +164,7 @@ article
 					.item
 						max-width: 735px
 						width: 100%
-						text-align-last: left
+						text-align: left
 						margin: 10px 0
 						// margin-bottom: 30px
 						figure.pic
